--- a/src/main/java/com/mycompany/proyecto_integrador1/votantes/VotarPersonero.form
+++ b/src/main/java/com/mycompany/proyecto_integrador1/votantes/VotarPersonero.form
@@ -191,9 +191,17 @@
           </Constraints>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextField1">
+          <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="86" red="3a" type="rgb"/>
+            </Property>
+            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+              <Border info="null"/>
+            </Property>
+          </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="360" y="650" width="170" height="40"/>
+              <AbsoluteConstraints x="360" y="640" width="180" height="60"/>
             </Constraint>
           </Constraints>
         </Component>
