--- a/src/main/java/com/mycompany/proyecto_integrador1/votantes/VotarRepresentante.form
+++ b/src/main/java/com/mycompany/proyecto_integrador1/votantes/VotarRepresentante.form
@@ -187,9 +187,17 @@
           </Constraints>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextField1">
+          <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="86" red="3a" type="rgb"/>
+            </Property>
+            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+              <Border info="null"/>
+            </Property>
+          </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="280" y="630" width="190" height="40"/>
+              <AbsoluteConstraints x="260" y="620" width="210" height="60"/>
             </Constraint>
           </Constraints>
         </Component>
