--- a/src/main/java/com/mycompany/proyecto_integrador1/Sistema/AdminInterface.form
+++ b/src/main/java/com/mycompany/proyecto_integrador1/Sistema/AdminInterface.form
@@ -134,6 +134,7 @@
             <Property name="horizontalAlignment" type="int" value="4"/>
           </Properties>
           <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnVotacionesMouseClicked"/>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnVotacionesActionPerformed"/>
           </Events>
           <Constraints>
